refactor(command): CommandToEntityMapper를 infra 레이어로 이동
- Mapper를 app/mapper에서 infra/mapper로 이동
- infra 모델(Entity) 변환 로직은 infra 레이어에 위치하는 것이 적절 
- DecisionLogIngestCommand를 record로 단순화